--- a/copy.html
+++ b/copy.html
@@ -1,123 +1,178 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-  </head>
-  <body onLoad="main()">
+</head>
+
+<body onLoad="main()">
     <canvas id="example" width="700" height="700"></canvas>
     <script src="./lib/webgl-utils.js"></script>
     <script src="./lib/webgl-debug.js"></script>
     <script src="./lib/cuon-utils.js"></script>
     <script src="./lib/cuon-matrix.js"></script>
     <script>
-      var VSHADER_SOURCE = `
+        var VSHADER_SOURCE = `
         attribute vec4 a_Position;
         attribute vec4 a_Color;
+        attribute vec4 a_Normal;
+        uniform mat4 u_MvpMatrix;
+        uniform mat4 u_ModelMatrix;
+        uniform mat4 u_NormalMatrix;
+        uniform vec3 u_LightColor;
+        uniform vec3 u_LightPosition;    
+        uniform vec3 u_AmbientLight;
         varying vec4 v_Color;
-        uniform  mat4 u_MvpMatrix;
         void main(){
-            gl_Position = u_MvpMatrix* a_Position;
-            v_Color = a_Color;
+            gl_Position = u_MvpMatrix *a_Position;
+            vec3 normal =  normalize(  vec3 ( u_NormalMatrix *a_Normal ) );
+            vec4 vertexPosition = u_ModelMatrix * a_Position;
+            vec3 lightDirection = normalize( u_LightPosition -vec3(vertexPosition) );
+            float nDotL = max( dot(lightDirection, normal ),0.0 );          
+            vec3 diffuse = u_LightColor * a_Color.rgb*nDotL;
+            vec3 ambient = u_AmbientLight * a_Color.rgb;
+            v_Color = vec4( diffuse + ambient ,a_Color.a);
         }
         `
-      var FSHADER_SOURCE = `
+        var FSHADER_SOURCE = `
         precision mediump float;
         varying vec4 v_Color;
         void main(){            
             gl_FragColor = v_Color;
         }
         `
-      function main() {
-        var canvas = document.getElementById('example')
-        if (!canvas) {
-          console.log('failed to retrieve the canvas element')
-          return false
+        function main() {
+            var canvas = document.getElementById('example')
+            if (!canvas) {
+                console.log('failed to retrieve the canvas element')
+                return false
+            }
+            var gl = getWebGLContext(canvas)
+            if (!gl) {
+                console.log('Failed to get rending contextfor webgl')
+            }
+            if (!initShaders(gl, VSHADER_SOURCE, FSHADER_SOURCE)) {
+                console.log('failed to initialize shaders')
+                return
+            }
+            var n = initVertexBuffers(gl)
+            gl.clearColor(0.0, 0.0, 0.0, 1.0)
+            gl.enable(gl.DEPTH_TEST)
+            var u_ModelMatrix = gl.getUniformLocation(gl.program, 'u_ModelMatrix')
+            var u_MvpMatrix = gl.getUniformLocation(
+                gl.program,
+                'u_MvpMatrix'
+            )
+            var u_NormalMatrix = gl.getUniformLocation(gl.program, 'u_NormalMatrix')
+            var u_LightColor = gl.getUniformLocation(gl.program, 'u_LightColor')
+            var u_LightPosition = gl.getUniformLocation(gl.program, 'u_LightPosition')
+
+            var u_AmbientLight = gl.getUniformLocation(gl.program, 'u_AmbientLight')
+
+            gl.uniform3f(u_LightColor, 1.0, 1.0, 1.0)
+            gl.uniform3f(u_LightPosition, 2.3, 4.0, 3.5)
+            gl.uniform3f(u_AmbientLight, 0.2, 0.2, 0.2)
+
+            var modelMatrix = new Matrix4()
+            var mvpMatrix = new Matrix4()
+            var normalMatrix = new Matrix4()
+
+            modelMatrix.setRotate(170, 0, 1, 0)
+            gl.uniformMatrix4fv(u_ModelMatrix, false, modelMatrix.elements)
+            mvpMatrix.setPerspective(30, canvas.width / canvas.height, 1, 100)
+            mvpMatrix.lookAt(4, 6, 14, 0, 0, 0, 0, 1, 0)
+            mvpMatrix.multiply(modelMatrix)
+            gl.uniformMatrix4fv(u_MvpMatrix, false, mvpMatrix.elements)
+            normalMatrix.setInverseOf(modelMatrix)
+            normalMatrix.transpose()
+            gl.uniformMatrix4fv(u_NormalMatrix, false, normalMatrix.elements)
+
+            gl.clear(gl.DEPTH_BUFFER_BIT | gl.COLOR_BUFFER_BIT)
+
+            gl.drawElements(gl.TRIANGLES, n, gl.UNSIGNED_BYTE, 0)
         }
-        var gl = getWebGLContext(canvas)
-        if (!gl) {
-          console.log('Failed to get rending contextfor webgl')
+        function initVertexBuffers(gl) {
+            var vertices = new Float32Array([
+                2.0, 2.0, 2.0, -2.0, 2.0, 2.0, -2.0, -2.0, 2.0, 2.0, -2.0, 2.0, // v0-v1-v2-v3 front
+                2.0, 2.0, 2.0, 2.0, -2.0, 2.0, 2.0, -2.0, -2.0, 2.0, 2.0, -2.0, // v0-v3-v4-v5 right
+                2.0, 2.0, 2.0, 2.0, 2.0, -2.0, -2.0, 2.0, -2.0, -2.0, 2.0, 2.0, // v0-v5-v6-v1 up
+                -2.0, 2.0, 2.0, -2.0, 2.0, -2.0, -2.0, -2.0, -2.0, -2.0, -2.0, 2.0, // v1-v6-v7-v2 left
+                -2.0, -2.0, -2.0, 2.0, -2.0, -2.0, 2.0, -2.0, 2.0, -2.0, -2.0, 2.0, // v7-v4-v3-v2 down
+                2.0, -2.0, -2.0, -2.0, -2.0, -2.0, -2.0, 2.0, -2.0, 2.0, 2.0, -2.0  // v4-v7-v6-v5 back
+            ])
+
+            var colors = new Float32Array([
+                1, 0, 0, 1, 0, 0, 1, 0, 0, 1, 0, 0,     // v0-v1-v2-v3 front
+                1, 0, 0, 1, 0, 0, 1, 0, 0, 1, 0, 0,     // v0-v3-v4-v5 right
+                1, 0, 0, 1, 0, 0, 1, 0, 0, 1, 0, 0,     // v0-v5-v6-v1 up
+                1, 0, 0, 1, 0, 0, 1, 0, 0, 1, 0, 0,     // v1-v6-v7-v2 left
+                1, 0, 0, 1, 0, 0, 1, 0, 0, 1, 0, 0,     // v7-v4-v3-v2 down
+                1, 0, 0, 1, 0, 0, 1, 0, 0, 1, 0, 0　    // v4-v7-v6-v5 back
+            ])
+
+            var normals = new Float32Array([ // Normal
+                0.0, 0.0, 1.0, 0.0, 0.0, 1.0, 0.0, 0.0, 1.0, 0.0, 0.0, 1.0,  // v0-v1-v2-v3 front
+                1.0, 0.0, 0.0, 1.0, 0.0, 0.0, 1.0, 0.0, 0.0, 1.0, 0.0, 0.0,  // v0-v3-v4-v5 right
+                0.0, 1.0, 0.0, 0.0, 1.0, 0.0, 0.0, 1.0, 0.0, 0.0, 1.0, 0.0,  // v0-v5-v6-v1 up
+                -1.0, 0.0, 0.0, -1.0, 0.0, 0.0, -1.0, 0.0, 0.0, -1.0, 0.0, 0.0,  // v1-v6-v7-v2 left
+                0.0, -1.0, 0.0, 0.0, -1.0, 0.0, 0.0, -1.0, 0.0, 0.0, -1.0, 0.0,  // v7-v4-v3-v2 down
+                0.0, 0.0, -1.0, 0.0, 0.0, -1.0, 0.0, 0.0, -1.0, 0.0, 0.0, -1.0   // v4-v7-v6-v5 back
+            ]);
+
+
+            var indices = new Uint8Array([
+                0, 1, 2, 0, 2, 3, // front
+                4, 5, 6, 4, 6, 7, // right
+                8, 9, 10, 8, 10, 11, // up
+                12, 13, 14, 12, 14, 15, // left
+                16, 17, 18, 16, 18, 19, // down
+                20, 21, 22, 20, 22, 23 // back
+            ])
+
+            if (!initArrayBuffer(gl, 'a_Position', vertices, 3, gl.FLOAT))
+                return -1
+            if (!initArrayBuffer(gl, 'a_Color', colors, 3, gl.FLOAT))
+                return -1
+
+            if (!initArrayBuffer(gl, 'a_Normal', normals, 3, gl.FLOAT))
+                return -1
+
+
+            gl.bindBuffer(gl.ARRAY_BUFFER, null)
+            var indexBuffer = gl.createBuffer()
+            if (!indexBuffer) {
+                console.log('Failed to create the buffer object')
+                return -1
+            }
+            gl.bindBuffer(gl.ELEMENT_ARRAY_BUFFER, indexBuffer)
+            gl.bufferData(gl.ELEMENT_ARRAY_BUFFER, indices, gl.STATIC_DRAW)
+            return indices.length
         }
-        if (!initShaders(gl, VSHADER_SOURCE, FSHADER_SOURCE)) {
-          console.log('failed to initialize shaders')
-          return
+
+        function initArrayBuffer(gl, attribute, data, num, type) {
+            var buffer = gl.createBuffer()
+            if (!buffer) {
+                return false
+            }
+            gl.bindBuffer(gl.ARRAY_BUFFER, buffer)
+            gl.bufferData(gl.ARRAY_BUFFER, data, gl.STATIC_DRAW)
+
+            var a_attribute = gl.getAttribLocation(gl.program, attribute)
+
+            if (a_attribute < 0) {
+                return false
+            }
+
+            gl.vertexAttribPointer(a_attribute, num, type, false, 0, 0)
+
+            gl.enableVertexAttribArray(a_attribute)
+            return true
+
         }
-        var n = initVertexBuffers(gl)
-        gl.clearColor(0.0, 0.0, 0.0, 1.0) 
-
-        var u_MvpMatrix = gl.getUniformLocation(gl.program, 'u_MvpMatrix')
-
-        var mvpMaxtrix = new Matrix4()
-        mvpMaxtrix.setOrtho(-1, 1, -1, 1, 0, 1)
-
-        gl.uniformMatrix4fv(u_MvpMatrix, false, mvpMaxtrix.elements)
-
-        gl.enable(gl.DEPTH_TEST)
-        gl.clear(gl.COLOR_BUFFER_BIT | gl.DEPTH_BUFFER_BIT)
-        gl.drawArrays(gl.TRIANGLES, 0, n)
-      }
-
-      function initVertexBuffers(gl) {
-        var pc = new Float32Array([
-          0.0, 0.5, -0.1, 0.0, 0.0, 1.0,
-
-          -0.5, -0.5, -0.1, 0.0, 0.0, 1.0,
-
-          0.5, -0.5, -0.1, 1.0, 1.0, 0.0,
-
-          0.5, 0.4, -0.5, 1.0, 1.0, 0.0,
-
-          -0.5, 0.4, -0.5, 1.0, 0.0, 0.0,
-
-          0.0, -0.6, -0.5, 1.0, 0.0, 0.0,
-        ])
-
-        var numVertex = 3
-        var numColor = 3
-        var n = 6
-
-        var pcBuffer = gl.createBuffer()
-        console.log(pcBuffer)
-        if (!pcBuffer) {
-          console.log('Failed to create the buffer object')
-          return -1
-        }
-        gl.bindBuffer(gl.ARRAY_BUFFER, pcBuffer)
-        gl.bufferData(gl.ARRAY_BUFFER, pc, gl.STATIC_DRAW)
-
-        var FSIZE = pc.BYTES_PER_ELEMENT
-
-        var STRIDE = numVertex + numColor
-
-        var a_Position = gl.getAttribLocation(gl.program, 'a_Position')
-
-        gl.vertexAttribPointer(
-          a_Position,
-          numVertex,
-          gl.FLOAT,
-          false,
-          FSIZE * STRIDE,
-          0
-        )
-
-        gl.enableVertexAttribArray(a_Position)
-
-        var a_Color = gl.getAttribLocation(gl.program, 'a_Color')
-        gl.vertexAttribPointer(
-          a_Color,
-          numColor,
-          gl.FLOAT,
-          false,
-          FSIZE * STRIDE,
-          FSIZE * numVertex
-        )
-
-        gl.enableVertexAttribArray(a_Color)
-
-        return n
-      }
     </script>
-  </body>
+</body>
+
 </html>
