--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
     <script>
         var VSHADER_SOURCE = `
         attribute vec4 a_Position;
-        attribute vec4 a_Color;
         attribute vec4 a_Normal;
         uniform mat4 u_MvpMatrix;
         uniform mat4 u_ModelMatrix;
@@ -27,9 +26,11 @@
         uniform vec3 u_AmbientLight;
         varying vec4 v_Color;
         void main(){
+            vec4 color = vec4(1.0,1.0,1.0,1.0);
             gl_Position = u_MvpMatrix *a_Position;
             vec3 normal =  normalize(  vec3 ( u_NormalMatrix *a_Normal ) );
             vec4 vertexPosition = u_ModelMatrix * a_Position;
+
             vec3 lightDirection = normalize( u_LightPosition -vec3(vertexPosition) );
             float nDotL = max( dot( normal, lightDirection ),0.0 );          
             vec3 diffuse = u_LightColor * a_Color.rgb*nDotL;
@@ -61,6 +62,7 @@
             var n = initVertexBuffers(gl)
             gl.clearColor(0.0, 0.0, 0.0, 1.0)
             gl.enable(gl.DEPTH_TEST)
+
             var u_ModelMatrix = gl.getUniformLocation(gl.program, 'u_ModelMatrix')
             var u_MvpMatrix = gl.getUniformLocation(
                 gl.program,
@@ -69,56 +71,40 @@
             var u_NormalMatrix = gl.getUniformLocation(gl.program, 'u_NormalMatrix')
             var u_LightColor = gl.getUniformLocation(gl.program, 'u_LightColor')
             var u_LightPosition = gl.getUniformLocation(gl.program, 'u_LightPosition')
-
             var u_AmbientLight = gl.getUniformLocation(gl.program, 'u_AmbientLight')
-
-            var vpMatrix = new Matrix4()
-            vpMatrix.setPerspective(30, canvas.width / canvas.height, 1, 100)
-            vpMatrix.lookAt(6, 6, 14, 0, 0, 0, 0, 1, 0)
-
-            gl.uniform3f(u_LightColor, 1.0, 1.0, 1.0)
-            gl.uniform3f(u_LightPosition, 2.3, 4.0, 3.5)
+            gl.uniform3f(u_LightColor, 0.8, 0.8, 0.8)
+            gl.uniform3f(u_LightPosition, 5.0, 8.0, 7.0)
             gl.uniform3f(u_AmbientLight, 0.2, 0.2, 0.2)
-
-            var currentAngle = 0.0;
 
             var modelMatrix = new Matrix4()
             var mvpMatrix = new Matrix4()
             var normalMatrix = new Matrix4()
+            gl.uniformMatrix4fv(u_ModelMatrix, false, modelMatrix.elements)
+            mvpMatrix.setPerspective( 30,canvas.width/canvas.height,1,100 )
+            mvpMatrix.lookAt(  0,0,6, 0,0,0,0, 1,0  )
+            mvpMatrix.multiply( modelMatrix )
+            gl.uniformMatrix4fv(u_MvpMatrix, false, mvpMatrix.elements)
+            normalMatrix.setInverseOf(modelMatrix)
+            normalMatrix.transpose()
+            gl.uniformMatrix4fv(u_NormalMatrix, false, normalMatrix.elements)
 
+            gl.clear(gl.DEPTH_BUFFER_BIT | gl.COLOR_BUFFER_BIT)
 
-
-            var tick = function () {
-                currentAngle = animate(currentAngle)
-                modelMatrix.setRotate(currentAngle, 0, 1, 0)
-                gl.uniformMatrix4fv(u_ModelMatrix, false, modelMatrix.elements)
-
-                mvpMatrix.set(vpMatrix).multiply(modelMatrix)
-                gl.uniformMatrix4fv(u_MvpMatrix, false, mvpMatrix.elements)
-
-                normalMatrix.setInverseOf(modelMatrix)
-                normalMatrix.transpose()
-                gl.uniformMatrix4fv(u_NormalMatrix, false, normalMatrix.elements)
-
-                gl.clear(gl.DEPTH_BUFFER_BIT | gl.COLOR_BUFFER_BIT)
-
-                gl.drawElements(gl.TRIANGLES, n, gl.UNSIGNED_BYTE, 0)
-
-                requestAnimationFrame( tick,canvas )
-
-
-            }
-            tick()
-
-
-
-
-
-
-
-
+            gl.drawElements(gl.TRIANGLES, n, gl.UNSIGNED_BYTE, 0)
         }
         function initVertexBuffers(gl) {
+            var SPHERE_DIV = 13;
+            var i,ai,si,ci;
+            var j,aj,sj,cj;
+            var p1,p2;
+            var positions =[];
+            
+
+
+
+
+
+
             var vertices = new Float32Array([
                 2.0, 2.0, 2.0, -2.0, 2.0, 2.0, -2.0, -2.0, 2.0, 2.0, -2.0, 2.0, // v0-v1-v2-v3 front
                 2.0, 2.0, 2.0, 2.0, -2.0, 2.0, 2.0, -2.0, -2.0, 2.0, 2.0, -2.0, // v0-v3-v4-v5 right
@@ -196,18 +182,7 @@
             return true
 
         }
-        var ANGLE_STEP = 30.0;
-        var g_last = Date.now()
-        function animate(angle){
-            var now = Date.now()
-            var elapsed = now - g_last
-            g_last = now;
 
-            var newAngle = angle + (ANGLE_STEP * elapsed)/1000.0
-
-            return newAngle %= 360
-
-        }
 
     </script>
 </body>
