--- a/index.html
+++ b/index.html
@@ -30,12 +30,11 @@
             gl_Position = u_MvpMatrix *a_Position;
             vec3 normal =  normalize(  vec3 ( u_NormalMatrix *a_Normal ) );
             vec4 vertexPosition = u_ModelMatrix * a_Position;
-
             vec3 lightDirection = normalize( u_LightPosition -vec3(vertexPosition) );
             float nDotL = max( dot( normal, lightDirection ),0.0 );          
-            vec3 diffuse = u_LightColor * a_Color.rgb*nDotL;
-            vec3 ambient = u_AmbientLight * a_Color.rgb;
-            v_Color = vec4( diffuse + ambient ,a_Color.a);
+            vec3 diffuse = u_LightColor * color.rgb*nDotL;
+            vec3 ambient = u_AmbientLight * color.rgb;
+            v_Color = vec4( diffuse + ambient ,color.a);
         }
         `
         var FSHADER_SOURCE = `
@@ -80,9 +79,9 @@
             var mvpMatrix = new Matrix4()
             var normalMatrix = new Matrix4()
             gl.uniformMatrix4fv(u_ModelMatrix, false, modelMatrix.elements)
-            mvpMatrix.setPerspective( 30,canvas.width/canvas.height,1,100 )
-            mvpMatrix.lookAt(  0,0,6, 0,0,0,0, 1,0  )
-            mvpMatrix.multiply( modelMatrix )
+            mvpMatrix.setPerspective(30, canvas.width / canvas.height, 1, 100)
+            mvpMatrix.lookAt(0, 0, 6, 0, 0, 0, 0, 1, 0)
+            mvpMatrix.multiply(modelMatrix)
             gl.uniformMatrix4fv(u_MvpMatrix, false, mvpMatrix.elements)
             normalMatrix.setInverseOf(modelMatrix)
             normalMatrix.transpose()
@@ -94,60 +93,44 @@
         }
         function initVertexBuffers(gl) {
             var SPHERE_DIV = 13;
-            var i,ai,si,ci;
-            var j,aj,sj,cj;
-            var p1,p2;
-            var positions =[];
-            
+            var i, ai, si, ci;
+            var j, aj, sj, cj;
+            var p1, p2;
+            var positions = [];
+            var indices = [];
+
+            for (j = 0; j < SPHERE_DIV; j++) {
+                aj = j * Math.PI / SPHERE_DIV
+                sj = Math.sin(aj)
+                cj = Math.cos(aj)
+                for (i = 0; i < SPHERE_DIV; i++) {
+                    ai = i * 2 * Math.PI / SPHERE_DIV
+                    si = Math.sin(ai)
+                    ci = Math.cos(ai);
+                    positions.push(si * sj)
+                    positions.push(cj)
+                    positions.push(ci * sj)
+                }
+            }
+
+            for (j = 0; j < SPHERE_DIV; j++) {
+                for (i = 0; i < SPHERE_DIV; i++) {
+                    p1 = j * (SPHERE_DIV + 1) + i
+                    p2 = p1 + (SPHERE_DIV + 1)
+                    indices.push(p1)
+                    indices.push(p2)
+                    indices.push(p1 + 1)
+                    indices.push(p1 + 1)
+                    indices.push(p2)
+                    indices.push(p2 + 1)
+                }
+            }
 
 
 
-
-
-
-            var vertices = new Float32Array([
-                2.0, 2.0, 2.0, -2.0, 2.0, 2.0, -2.0, -2.0, 2.0, 2.0, -2.0, 2.0, // v0-v1-v2-v3 front
-                2.0, 2.0, 2.0, 2.0, -2.0, 2.0, 2.0, -2.0, -2.0, 2.0, 2.0, -2.0, // v0-v3-v4-v5 right
-                2.0, 2.0, 2.0, 2.0, 2.0, -2.0, -2.0, 2.0, -2.0, -2.0, 2.0, 2.0, // v0-v5-v6-v1 up
-                -2.0, 2.0, 2.0, -2.0, 2.0, -2.0, -2.0, -2.0, -2.0, -2.0, -2.0, 2.0, // v1-v6-v7-v2 left
-                -2.0, -2.0, -2.0, 2.0, -2.0, -2.0, 2.0, -2.0, 2.0, -2.0, -2.0, 2.0, // v7-v4-v3-v2 down
-                2.0, -2.0, -2.0, -2.0, -2.0, -2.0, -2.0, 2.0, -2.0, 2.0, 2.0, -2.0  // v4-v7-v6-v5 back
-            ])
-
-            var colors = new Float32Array([
-                1, 0, 0, 1, 0, 0, 1, 0, 0, 1, 0, 0,     // v0-v1-v2-v3 front
-                1, 0, 0, 1, 0, 0, 1, 0, 0, 1, 0, 0,     // v0-v3-v4-v5 right
-                1, 0, 0, 1, 0, 0, 1, 0, 0, 1, 0, 0,     // v0-v5-v6-v1 up
-                1, 0, 0, 1, 0, 0, 1, 0, 0, 1, 0, 0,     // v1-v6-v7-v2 left
-                1, 0, 0, 1, 0, 0, 1, 0, 0, 1, 0, 0,     // v7-v4-v3-v2 down
-                1, 0, 0, 1, 0, 0, 1, 0, 0, 1, 0, 0　    // v4-v7-v6-v5 back
-            ])
-
-            var normals = new Float32Array([ // Normal
-                0.0, 0.0, 1.0, 0.0, 0.0, 1.0, 0.0, 0.0, 1.0, 0.0, 0.0, 1.0,  // v0-v1-v2-v3 front
-                1.0, 0.0, 0.0, 1.0, 0.0, 0.0, 1.0, 0.0, 0.0, 1.0, 0.0, 0.0,  // v0-v3-v4-v5 right
-                0.0, 1.0, 0.0, 0.0, 1.0, 0.0, 0.0, 1.0, 0.0, 0.0, 1.0, 0.0,  // v0-v5-v6-v1 up
-                -1.0, 0.0, 0.0, -1.0, 0.0, 0.0, -1.0, 0.0, 0.0, -1.0, 0.0, 0.0,  // v1-v6-v7-v2 left
-                0.0, -1.0, 0.0, 0.0, -1.0, 0.0, 0.0, -1.0, 0.0, 0.0, -1.0, 0.0,  // v7-v4-v3-v2 down
-                0.0, 0.0, -1.0, 0.0, 0.0, -1.0, 0.0, 0.0, -1.0, 0.0, 0.0, -1.0   // v4-v7-v6-v5 back
-            ]);
-
-
-            var indices = new Uint8Array([
-                0, 1, 2, 0, 2, 3, // front
-                4, 5, 6, 4, 6, 7, // right
-                8, 9, 10, 8, 10, 11, // up
-                12, 13, 14, 12, 14, 15, // left
-                16, 17, 18, 16, 18, 19, // down
-                20, 21, 22, 20, 22, 23 // back
-            ])
-
-            if (!initArrayBuffer(gl, 'a_Position', vertices, 3, gl.FLOAT))
+            if (!initArrayBuffer(gl, 'a_Position', new Float32Array(positions), gl.FLOAT,3))
                 return -1
-            if (!initArrayBuffer(gl, 'a_Color', colors, 3, gl.FLOAT))
-                return -1
-
-            if (!initArrayBuffer(gl, 'a_Normal', normals, 3, gl.FLOAT))
+            if (!initArrayBuffer(gl, 'a_Normal', new Float32Array(positions), gl.FLOAT,3))
                 return -1
 
 
@@ -158,7 +141,7 @@
                 return -1
             }
             gl.bindBuffer(gl.ELEMENT_ARRAY_BUFFER, indexBuffer)
-            gl.bufferData(gl.ELEMENT_ARRAY_BUFFER, indices, gl.STATIC_DRAW)
+            gl.bufferData(gl.ELEMENT_ARRAY_BUFFER, new Uint16Array(indices), gl.STATIC_DRAW)
             return indices.length
         }
 
@@ -179,6 +162,9 @@
             gl.vertexAttribPointer(a_attribute, num, type, false, 0, 0)
 
             gl.enableVertexAttribArray(a_attribute)
+
+            gl.bindBuffer( gl.ARRAY_BUFFER,null )
+
             return true
 
         }
