--- a/index.html
+++ b/index.html
@@ -22,20 +22,17 @@
         uniform mat4 u_MvpMatrix;
         uniform mat4 u_ModelMatrix;
         uniform mat4 u_NormalMatrix;
-        uniform vec3 u_LightColor;
-        uniform vec3 u_LightPosition;    
-        uniform vec3 u_AmbientLight;
+
         varying vec4 v_Color;
+        varying vec3 v_Normal;
+        varying vec3 v_Position;
+
         void main(){
             vec4 color = vec4(1.0,1.0,1.0,1.0);
             gl_Position = u_MvpMatrix *a_Position;
-            vec3 normal =  normalize(  vec3 ( u_NormalMatrix *a_Normal ) );
-            vec4 vertexPosition = u_ModelMatrix * a_Position;
-            vec3 lightDirection = normalize( u_LightPosition -vec3(vertexPosition) );
-            float nDotL = max( dot( normal, lightDirection ),0.0 );          
-            vec3 diffuse = u_LightColor * color.rgb*nDotL;
-            vec3 ambient = u_AmbientLight * color.rgb;
-            v_Color = vec4( diffuse + ambient ,color.a);
+            v_Position = vec3( u_ModelMatrix * a_Position );
+          v_Normal = normalize( vec3( u_NormalMatrix*a_Normal ) );
+          v_Color = color;
         }
         `
 
