--- a/index.html
+++ b/index.html
@@ -40,9 +40,19 @@
         var FSHADER_SOURCE =
             `
         precision mediump float;
+        uniform vec3 u_LightColor;
+        uniform vec3 u_LightPosition;
+        uniform vec3 u_AmbientLight;
+        varying vec3 v_Normal;
+        varying vec3 v_Position;
         varying vec4 v_Color;
         void main(){            
-            gl_FragColor = v_Color;
+            vec3 normal = normalize(v_Normal);
+            vec3 lightDirection = normaloze( u_LightPosition - v_Position );
+            float nDotL = max( dot( lightDirection,normal ),0.0 );
+            vec3 diffuse = u_LightColor * v_Color.rgb * nDotL;
+            vec3 ambient = u_AmbientLight * v_Color.rgb;
+            gl_FragColor = vec4( diffuse + ambient,   v_Color.a  );
         }
         `
 
@@ -97,20 +107,31 @@
             var mvpMatrix = new Matrix4(); 　 // Model view projection matrix
             var normalMatrix = new Matrix4(); // Transformation matrix for normals
 
+
+            modelMatrix.setRotate(90, 0, 1, 0)
+
             // Pass the model matrix to u_ModelMatrix
-            gl.uniformMatrix4fv(u_ModelMatrix, false, modelMatrix.elements);
+
 
             // Calculate the view projection matrix
             mvpMatrix.setPerspective(30, canvas.width / canvas.height, 1, 100);
             mvpMatrix.lookAt(0, 0, 6, 0, 0, 0, 0, 1, 0);
             mvpMatrix.multiply(modelMatrix);
             // Pass the model view projection matrix to u_MvpMatrix
-            gl.uniformMatrix4fv(u_MvpMatrix, false, mvpMatrix.elements);
+
+
+
 
             // Calculate the matrix to transform the normal based on the model matrix
             normalMatrix.setInverseOf(modelMatrix);
             normalMatrix.transpose();
             // Pass the transformation matrix for normals to u_NormalMatrix
+
+
+            gl.uniformMatrix4fv(u_ModelMatrix, false, modelMatrix.elements);
+            gl.uniformMatrix4fv(u_MvpMatrix, false, mvpMatrix.elements);
+
+
             gl.uniformMatrix4fv(u_NormalMatrix, false, normalMatrix.elements);
 
             // Clear color and depth buffer
