--- a/index.html
+++ b/index.html
@@ -20,40 +20,26 @@
         attribute vec4 a_Position;
         attribute vec4 a_Normal;
         uniform mat4 u_MvpMatrix;
-        uniform mat4 u_ModelMatrix;
         uniform mat4 u_NormalMatrix;
-
         varying vec4 v_Color;
-        varying vec3 v_Normal;
-        varying vec3 v_Position;
-
         void main(){
-            vec4 color = vec4(1.0,1.0,1.0,1.0);
-            gl_Position = u_MvpMatrix *a_Position;
-            v_Position = vec3( u_ModelMatrix * a_Position );
-          v_Normal = normalize( vec3( u_NormalMatrix*a_Normal ) );
-          v_Color = color;
+            gl_Position =  u_MvpMatrix * a_Position;
+            vec3 lightDirection = normalize( vec3( 0.0,0.5,0.7 ) );
+            vec4 color = vec4( 1.0,0.4,0.0,1.0 );
+            vec3 normal = normalize( (u_NormalMatrix * a_Normal).xyz );
+            float nDotL = max( dot( normal,lightDirection ),0.0 );
+            v_Color = vec4( color.rgb * nDotL + vec3(0.1),color.a );
         }
         `
 
         // Fragment shader program
         var FSHADER_SOURCE =
             `
-        precision mediump float;
-        uniform vec3 u_LightColor;
-        uniform vec3 u_LightPosition;
-        uniform vec3 u_AmbientLight;
-        varying vec3 v_Normal;
-        varying vec3 v_Position;
-        varying vec4 v_Color;
-        void main(){            
-            vec3 normal = normalize(v_Normal);
-            vec3 lightDirection = normalize( u_LightPosition - v_Position );
-            float nDotL = max( dot( lightDirection,normal ),0.0 );
-            vec3 diffuse = u_LightColor * v_Color.rgb * nDotL;
-            vec3 ambient = u_AmbientLight * v_Color.rgb;
-            gl_FragColor = vec4( diffuse + ambient,   v_Color.a  );
-        }
+      precision mediump float;
+      varying vec4 v_Color;
+      void main(){
+          gl_FragColor = v_Color;
+      }
         `
 
         function main() {
@@ -79,153 +65,43 @@
                 console.log('Failed to set the vertex information');
                 return;
             }
+            gl.clearColor(0.0, 0.0, 0.0, 1.0);
+            gl.clear(gl.DEPTH_TEST);
 
-            // Set the clear color and enable the depth test
-            gl.clearColor(0, 0, 0, 1);
-            gl.enable(gl.DEPTH_TEST);
 
-            // Get the storage locations of uniform variables and so on
-            var u_ModelMatrix = gl.getUniformLocation(gl.program, 'u_ModelMatrix');
-            var u_MvpMatrix = gl.getUniformLocation(gl.program, 'u_MvpMatrix');
-            var u_NormalMatrix = gl.getUniformLocation(gl.program, 'u_NormalMatrix');
-            var u_LightColor = gl.getUniformLocation(gl.program, 'u_LightColor');
-            var u_LightPosition = gl.getUniformLocation(gl.program, 'u_LightPosition');
-            var u_AmbientLight = gl.getUniformLocation(gl.program, 'u_AmbientLight');
-            if (!u_MvpMatrix || !u_NormalMatrix || !u_LightColor || !u_LightPosition || !u_AmbientLight) {
-                console.log('Failed to get the storage location');
-                return;
+            var u_MvpMatrix = gl.getUniformLocation(gl.program, 'u_MvpMatrix')
+            var u_NormalMatrix = gl.getUniformLocation(gl.program, 'u_NormalMatrix')
+            if (!u_MvpMatrix || !u_NormalMatrix) {
+                console.log('失败location')
             }
 
-            // Set the light color (white)
-            gl.uniform3f(u_LightColor, 0.8, 0.8, 0.8);
-            // Set the light direction (in the world coordinate)
-            gl.uniform3f(u_LightPosition, 5.0, 8.0, 7.0);
-            // Set the ambient light
-            gl.uniform3f(u_AmbientLight, 0.2, 0.2, 0.2);
+            var viewProjMatrix = new Matrix4();
+            viewProjMatrix.setPerspective(50.0, canvas.width / canvas.height, 1.0, 100.0)
+            viewProjMatrix.lookAt(20.0, 10.0, 30.0, 0.0, 0.0, 0.0, 0.0, 1.0, 0.0)
 
-            var modelMatrix = new Matrix4();  // Model matrix
-            var mvpMatrix = new Matrix4(); 　 // Model view projection matrix
-            var normalMatrix = new Matrix4(); // Transformation matrix for normals
+            document.onkeydown = function (ev) {
+                keydown(ev, gl, n, viewProjMatrix, u_MvpMatrix, u_NormalMatrix)
+            }
 
-
-            modelMatrix.setRotate(90, 0, 1, 0)
-
-            // Pass the model matrix to u_ModelMatrix
+            draw(gl, n, viewProjMatrix, u_MvpMatrix, u_NormalMatrix)
 
 
-            // Calculate the view projection matrix
-            mvpMatrix.setPerspective(30, canvas.width / canvas.height, 1, 100);
-            mvpMatrix.lookAt(0, 0, 6, 0, 0, 0, 0, 1, 0);
-            mvpMatrix.multiply(modelMatrix);
-            // Pass the model view projection matrix to u_MvpMatrix
-
-
-
-            normalMatrix.setInverseOf(modelMatrix);
-            normalMatrix.transpose();
-            // Pass the transformation matrix for normals to u_NormalMatrix
-
-
-            gl.uniformMatrix4fv(u_ModelMatrix, false, modelMatrix.elements);
-
-            gl.uniformMatrix4fv(u_MvpMatrix, false, mvpMatrix.elements);
-
-
-            gl.uniformMatrix4fv(u_NormalMatrix, false, normalMatrix.elements);
-
-            // Clear color and depth buffer
-            gl.clear(gl.COLOR_BUFFER_BIT | gl.DEPTH_BUFFER_BIT);
-
-            // Draw the cube(Note that the 3rd argument is the gl.UNSIGNED_SHORT)
-            gl.drawElements(gl.TRIANGLES, n, gl.UNSIGNED_SHORT, 0);
         }
 
         function initVertexBuffers(gl) { // Create a sphere
-            var SPHERE_DIV = 13;
 
-            var i, ai, si, ci;
-            var j, aj, sj, cj;
-            var p1, p2;
-
-            var positions = [];
-            var indices = [];
-
-            // Generate coordinates
-            for (j = 0; j <= SPHERE_DIV; j++) {
-                aj = j * Math.PI / SPHERE_DIV;
-                sj = Math.sin(aj);
-                cj = Math.cos(aj);
-                for (i = 0; i <= SPHERE_DIV; i++) {
-                    ai = i * 2 * Math.PI / SPHERE_DIV;
-                    si = Math.sin(ai);
-                    ci = Math.cos(ai);
-
-                    positions.push(si * sj);  // X
-                    positions.push(cj);       // Y
-                    positions.push(ci * sj);  // Z
-                }
-            }
-
-            // Generate indices
-            for (j = 0; j < SPHERE_DIV; j++) {
-                for (i = 0; i < SPHERE_DIV; i++) {
-                    p1 = j * (SPHERE_DIV + 1) + i;
-                    p2 = p1 + (SPHERE_DIV + 1);
-
-                    indices.push(p1);
-                    indices.push(p2);
-                    indices.push(p1 + 1);
-
-                    indices.push(p1 + 1);
-                    indices.push(p2);
-                    indices.push(p2 + 1);
-                }
-            }
-
-            // Write the vertex property to buffers (coordinates and normals)
-            // Same data can be used for vertex and normal
-            // In order to make it intelligible, another buffer is prepared separately
-            if (!initArrayBuffer(gl, 'a_Position', new Float32Array(positions), gl.FLOAT, 3)) return -1;
-            if (!initArrayBuffer(gl, 'a_Normal', new Float32Array(positions), gl.FLOAT, 3)) return -1;
-
-            // Unbind the buffer object
-            gl.bindBuffer(gl.ARRAY_BUFFER, null);
-
-            // Write the indices to the buffer object
-            var indexBuffer = gl.createBuffer();
-            if (!indexBuffer) {
-                console.log('Failed to create the buffer object');
-                return -1;
-            }
-            gl.bindBuffer(gl.ELEMENT_ARRAY_BUFFER, indexBuffer);
-            gl.bufferData(gl.ELEMENT_ARRAY_BUFFER, new Uint16Array(indices), gl.STATIC_DRAW);
-
-            return indices.length;
         }
 
         function initArrayBuffer(gl, attribute, data, type, num) {
-            // Create a buffer object
-            var buffer = gl.createBuffer();
-            if (!buffer) {
-                console.log('Failed to create the buffer object');
-                return false;
-            }
-            // Write date into the buffer object
-            gl.bindBuffer(gl.ARRAY_BUFFER, buffer);
-            gl.bufferData(gl.ARRAY_BUFFER, data, gl.STATIC_DRAW);
-            // Assign the buffer object to the attribute variable
-            var a_attribute = gl.getAttribLocation(gl.program, attribute);
-            if (a_attribute < 0) {
-                console.log('Failed to get the storage location of ' + attribute);
-                return false;
-            }
-            gl.vertexAttribPointer(a_attribute, num, type, false, 0, 0);
-            // Enable the assignment of the buffer object to the attribute variable
-            gl.enableVertexAttribArray(a_attribute);
 
-            gl.bindBuffer(gl.ARRAY_BUFFER, null);
+        }
 
-            return true;
+        function keydown(){
+            
+        }
+
+        function draw(){
+
         }
 
     </script>
