--- a/index.html
+++ b/index.html
@@ -88,7 +88,53 @@
 
         }
 
+
+        var ANGLE_STEP = 3.0;
+        var g_arm1Angle = -90.0;
+        var g_joint1Angle = 0.0;
+
+
+
+
+
+
+
         function initVertexBuffers(gl) { // Create a sphere
+            var vertices = new Float32Array([
+                1.5, 10.0, 1.5,
+                -1.5, 10.0, 1.5,
+                -1.5, 0.0, 1.5,
+                1.5, 0.0, 1.5, // v0-v1-v2-v3 front
+                1.5, 10.0, 1.5, 1.5, 0.0, 1.5, 1.5, 0.0, -1.5, 1.5, 10.0, -1.5, // v0-v3-v4-v5 right
+                1.5, 10.0, 1.5, 1.5, 10.0, -1.5, -1.5, 10.0, -1.5, -1.5, 10.0, 1.5, // v0-v5-v6-v1 up
+                -1.5, 10.0, 1.5, -1.5, 10.0, -1.5, -1.5, 0.0, -1.5, -1.5, 0.0, 1.5, // v1-v6-v7-v2 left
+                -1.5, 0.0, -1.5, 1.5, 0.0, -1.5, 1.5, 0.0, 1.5, -1.5, 0.0, 1.5, // v7-v4-v3-v2 down
+                1.5, 0.0, -1.5, -1.5, 0.0, -1.5, -1.5, 10.0, -1.5, 1.5, 10.0, -1.5  // v4-v7-v6-v5 back
+            ]);
+
+            // Normal
+            var normals = new Float32Array([
+                0.0, 0.0, 1.0, 0.0, 0.0, 1.0, 0.0, 0.0, 1.0, 0.0, 0.0, 1.0, // v0-v1-v2-v3 front
+                1.0, 0.0, 0.0, 1.0, 0.0, 0.0, 1.0, 0.0, 0.0, 1.0, 0.0, 0.0, // v0-v3-v4-v5 right
+                0.0, 1.0, 0.0, 0.0, 1.0, 0.0, 0.0, 1.0, 0.0, 0.0, 1.0, 0.0, // v0-v5-v6-v1 up
+                -1.0, 0.0, 0.0, -1.0, 0.0, 0.0, -1.0, 0.0, 0.0, -1.0, 0.0, 0.0, // v1-v6-v7-v2 left
+                0.0, -1.0, 0.0, 0.0, -1.0, 0.0, 0.0, -1.0, 0.0, 0.0, -1.0, 0.0, // v7-v4-v3-v2 down
+                0.0, 0.0, -1.0, 0.0, 0.0, -1.0, 0.0, 0.0, -1.0, 0.0, 0.0, -1.0  // v4-v7-v6-v5 back
+            ]);
+
+            // Indices of the vertices
+            var indices = new Uint8Array([
+                0, 1, 2, 0, 2, 3,    // front
+                4, 5, 6, 4, 6, 7,    // right
+                8, 9, 10, 8, 10, 11,    // up
+                12, 13, 14, 12, 14, 15,    // left
+                16, 17, 18, 16, 18, 19,    // down
+                20, 21, 22, 20, 22, 23     // back
+            ]);
+            if (!initArrayBuffer(gl, 'a_Position', vertices, gl.FLOAT, 3)) return -1
+            if (!initArrayBuffer(gl, 'a_Normal', normals, gl.FLOAT, 3)) return -1
+
+            gl.bindBuffer(gl.ARRAY_BUFFER, null)
 
         }
 
@@ -96,11 +142,37 @@
 
         }
 
-        function keydown(){
-            
+        function keydown(ev, gl, n, viewProjMatrix, u_MvpMatrix, u_NormalMatrix) {
+            switch (ev.keyCode) {
+                case 38:
+                    if (g_joint1Angle < 135.0) g_joint1Angle += ANGLE_STEP;
+
+                    break;
+
+                case 40:
+
+                    if (g_joint1Angle > -135.0) {
+                        g_joint1Angle -= ANGLE_STEP
+                    }
+                    break;
+
+                case 39:
+                    g_arm1Angle = (g_arm1Angle + ANGLE_STEP) % 360;
+
+
+                    break;
+
+                case 37:
+                    g_arm1Angle = (g_arm1Angle - ANGLE_STEP) % 360;
+                    break;
+
+                default: return;
+            }
+            draw(gl, n.viewProjMatrix, u_MvpMatrix, u_NormalMatrix)
+
         }
 
-        function draw(){
+        function draw() {
 
         }
 
