--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body onLoad="main()">
-    <canvas id="example" width="700" height="700"></canvas>
+    <canvas id="example" width="1000" height="1000"></canvas>
     <script src="./lib/webgl-utils.js"></script>
     <script src="./lib/webgl-debug.js"></script>
     <script src="./lib/cuon-utils.js"></script>
@@ -175,7 +175,7 @@
 
                 default: return;
             }
-            draw(gl, n.viewProjMatrix, u_MvpMatrix, u_NormalMatrix)
+            draw(gl, n,viewProjMatrix, u_MvpMatrix, u_NormalMatrix)
 
         }
 
@@ -203,11 +203,12 @@
         function drawBox(gl, n, viewProjMatrix, u_MvpMatrix, u_NormalMatrix) {
             g_mvpMatrix.set(viewProjMatrix)
             g_mvpMatrix.multiply(g_modelMatrix)
-            gl.uniformMatrix4fv(u_MvpMatrix, false, g_mvpMatrix.transpose())
+       
+            gl.uniformMatrix4fv(u_MvpMatrix, false, g_mvpMatrix.elements)
+            g_normalMatrix.setInverseOf( g_modelMatrix )
+            g_normalMatrix.transpose()
             gl.uniformMatrix4fv(u_NormalMatrix, false, g_normalMatrix.elements)
-
             gl.drawElements(gl.TRIANGLES, n, gl.UNSIGNED_BYTE, 0)
-
         }
 
     </script>
