--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
             }
 
             var viewProjMatrix = new Matrix4();
-            viewProjMatrix.setPerspective(50.0, canvas.width / canvas.height, 1.0, 100.0)
+            viewProjMatrix.setPerspective(40.0, canvas.width / canvas.height, 1.0, 100.0)
             viewProjMatrix.lookAt(20.0, 10.0, 30.0, 0.0, 0.0, 0.0, 0.0, 1.0, 0.0)
 
             document.onkeydown = function (ev) {
@@ -91,9 +91,9 @@
 
             draw(gl, n, viewProjMatrix, u_MvpMatrix, u_NormalMatrix)
         }
-        var ANGLE_STEP = 3.0;
-        var g_arm1Angle = -90.0;
-        var g_joint1Angle = 0.0;
+        var ANGLE_STEP = 12.0;
+        var g_arm1Angle = -40.0;
+        var g_joint1Angle = 20.0;
         function initVertexBuffers(gl) { // Create a sphere
             var vertices = new Float32Array([
                 1.5, 10.0, 1.5,
@@ -196,7 +196,10 @@
             g_modelMatrix.rotate(g_arm1Angle, 0.0, 1.0, 0.0)
             drawBox(gl, n, viewProjMatrix, u_MvpMatrix, u_NormalMatrix)
             console.log( 'arm1Length',arm1Length )
-            g_modelMatrix.translate(0.0, arm1Length, 0.0)
+            // g_modelMatrix.translate(0.0, arm1Length, 0.0)
+
+            g_modelMatrix.translate(0.0, 8, 0.0)
+
             g_modelMatrix.rotate(g_joint1Angle, 0.0, 0.0, 1.0)
             g_modelMatrix.scale(1.3, 1.0, 1.3)
 
