--- a/index.html
+++ b/index.html
@@ -92,8 +92,8 @@
             draw(gl, n, viewProjMatrix, u_MvpMatrix, u_NormalMatrix)
         }
         var ANGLE_STEP = 12.0;
-        var g_arm1Angle = -40.0;
-        var g_joint1Angle = 20.0;
+        var g_arm1Angle = -90.0;
+        var g_joint1Angle = 0.0;
         function initVertexBuffers(gl) { // Create a sphere
             var vertices = new Float32Array([
                 1.5, 10.0, 1.5,
@@ -200,7 +200,10 @@
 
             g_modelMatrix.translate(0.0, 8, 0.0)
 
-            g_modelMatrix.rotate(g_joint1Angle, 0.0, 0.0, 1.0)
+            // g_modelMatrix.rotate(g_joint1Angle, 0.0, 0.0, 1.0)
+
+            g_modelMatrix.rotate(g_joint1Angle, 1.0, 0.0, 0.0)
+
             g_modelMatrix.scale(1.3, 1.0, 1.3)
 
             drawBox(gl, n, viewProjMatrix, u_MvpMatrix, u_NormalMatrix)
