--- a/index.html
+++ b/index.html
@@ -58,13 +58,11 @@
                 console.log('Failed to get the rendering context for WebGL');
                 return;
             }
-
             // Initialize shaders
             if (!initShaders(gl, VSHADER_SOURCE, FSHADER_SOURCE)) {
                 console.log('Failed to intialize shaders.');
                 return;
             }
-
             // Set the vertex coordinates, the color and the normal
             var n = initVertexBuffers(gl);
             if (n < 0) {
@@ -73,40 +71,33 @@
             }
             gl.clearColor(0.0, 0.0, 0.0, 1.0);
             gl.enable(gl.DEPTH_TEST);
-
-
             var u_MvpMatrix = gl.getUniformLocation(gl.program, 'u_MvpMatrix')
             var u_NormalMatrix = gl.getUniformLocation(gl.program, 'u_NormalMatrix')
             if (!u_MvpMatrix || !u_NormalMatrix) {
                 console.log('失败location')
             }
-
             var viewProjMatrix = new Matrix4();
             viewProjMatrix.setPerspective(40.0, canvas.width / canvas.height, 1.0, 100.0)
             viewProjMatrix.lookAt(20.0, 10.0, 30.0, 0.0, 0.0, 0.0, 0.0, 1.0, 0.0)
-
             document.onkeydown = function (ev) {
                 keydown(ev, gl, n, viewProjMatrix, u_MvpMatrix, u_NormalMatrix)
             }
-
             draw(gl, n, viewProjMatrix, u_MvpMatrix, u_NormalMatrix)
         }
         var ANGLE_STEP = 12.0;
-        var g_arm1Angle = -90.0;
-        var g_joint1Angle = 0.0;
+        var g_arm1Angle = 90.0;
+        var g_joint1Angle = 45.0;
+        var g_joint2Angle = 0.0;
+        var g_joint3Angle = 0.0;
         function initVertexBuffers(gl) { // Create a sphere
             var vertices = new Float32Array([
-                1.5, 10.0, 1.5,
-                -1.5, 10.0, 1.5,
-                -1.5, 0.0, 1.5,
-                1.5, 0.0, 1.5, // v0-v1-v2-v3 front
-                1.5, 10.0, 1.5, 1.5, 0.0, 1.5, 1.5, 0.0, -1.5, 1.5, 10.0, -1.5, // v0-v3-v4-v5 right
-                1.5, 10.0, 1.5, 1.5, 10.0, -1.5, -1.5, 10.0, -1.5, -1.5, 10.0, 1.5, // v0-v5-v6-v1 up
-                -1.5, 10.0, 1.5, -1.5, 10.0, -1.5, -1.5, 0.0, -1.5, -1.5, 0.0, 1.5, // v1-v6-v7-v2 left
-                -1.5, 0.0, -1.5, 1.5, 0.0, -1.5, 1.5, 0.0, 1.5, -1.5, 0.0, 1.5, // v7-v4-v3-v2 down
-                1.5, 0.0, -1.5, -1.5, 0.0, -1.5, -1.5, 10.0, -1.5, 1.5, 10.0, -1.5  // v4-v7-v6-v5 back
+                0.5, 1.0, 0.5, -0.5, 1.0, 0.5, -0.5, 0.0, 0.5, 0.5, 0.0, 0.5, // v0-v1-v2-v3 front
+                0.5, 1.0, 0.5, 0.5, 0.0, 0.5, 0.5, 0.0, -0.5, 0.5, 1.0, -0.5, // v0-v3-v4-v5 right
+                0.5, 1.0, 0.5, 0.5, 1.0, -0.5, -0.5, 1.0, -0.5, -0.5, 1.0, 0.5, // v0-v5-v6-v1 up
+                -0.5, 1.0, 0.5, -0.5, 1.0, -0.5, -0.5, 0.0, -0.5, -0.5, 0.0, 0.5, // v1-v6-v7-v2 left
+                -0.5, 0.0, -0.5, 0.5, 0.0, -0.5, 0.5, 0.0, 0.5, -0.5, 0.0, 0.5, // v7-v4-v3-v2 down
+                0.5, 0.0, -0.5, -0.5, 0.0, -0.5, -0.5, 1.0, -0.5, 0.5, 1.0, -0.5  // v4-v7-v6-v5 back
             ]);
-
             // Normal
             var normals = new Float32Array([
                 0.0, 0.0, 1.0, 0.0, 0.0, 1.0, 0.0, 0.0, 1.0, 0.0, 0.0, 1.0, // v0-v1-v2-v3 front
@@ -116,7 +107,6 @@
                 0.0, -1.0, 0.0, 0.0, -1.0, 0.0, 0.0, -1.0, 0.0, 0.0, -1.0, 0.0, // v7-v4-v3-v2 down
                 0.0, 0.0, -1.0, 0.0, 0.0, -1.0, 0.0, 0.0, -1.0, 0.0, 0.0, -1.0  // v4-v7-v6-v5 back
             ]);
-
             // Indices of the vertices
             var indices = new Uint8Array([
                 0, 1, 2, 0, 2, 3,    // front
@@ -128,99 +118,103 @@
             ]);
             if (!initArrayBuffer(gl, 'a_Position', vertices, gl.FLOAT, 3)) return -1
             if (!initArrayBuffer(gl, 'a_Normal', normals, gl.FLOAT, 3)) return -1
-
             gl.bindBuffer(gl.ARRAY_BUFFER, null)
-
             var indexBuffer = gl.createBuffer()
-
             gl.bindBuffer(gl.ELEMENT_ARRAY_BUFFER, indexBuffer)
-
             gl.bufferData(gl.ELEMENT_ARRAY_BUFFER, indices, gl.STATIC_DRAW)
-
             return indices.length
-
         }
-
         function initArrayBuffer(gl, attribute, data, type, num) {
             var buffer = gl.createBuffer();
             gl.bindBuffer(gl.ARRAY_BUFFER, buffer)
             gl.bufferData(gl.ARRAY_BUFFER, data, gl.STATIC_DRAW)
-
             var a_attribute = gl.getAttribLocation(gl.program, attribute)
-
             gl.vertexAttribPointer(a_attribute, num, type, false, 0, 0)
             gl.enableVertexAttribArray(a_attribute)
-
             return true
-
         }
-
         function keydown(ev, gl, n, viewProjMatrix, u_MvpMatrix, u_NormalMatrix) {
             switch (ev.keyCode) {
-                case 38:
-                    if (g_joint1Angle < 135.0) g_joint1Angle += ANGLE_STEP;
-
-                    break;
-
                 case 40:
-
-                    if (g_joint1Angle > -135.0) {
-                        g_joint1Angle -= ANGLE_STEP
+                    if (g_joint1Angle < 135.0) {
+                        g_joint1Angle += ANGLE_STEP
                     }
                     break;
-
+                case 38:
+                    if (g_joint1Angle > -135.0) g_joint1Angle -= ANGLE_STEP;
+                    break;
                 case 39:
                     g_arm1Angle = (g_arm1Angle + ANGLE_STEP) % 360;
-
-
                     break;
-
                 case 37:
                     g_arm1Angle = (g_arm1Angle - ANGLE_STEP) % 360;
                     break;
-
+                case 90:
+                    g_arm1Angle = (g_arm1Angle - ANGLE_STEP) % 360;
+                    break;
+                case 88:
+                    g_arm1Angle = (g_arm1Angle - ANGLE_STEP) % 360;
+                    break;
+                case 86:
+                    g_arm1Angle = (g_arm1Angle - ANGLE_STEP) % 360;
+                    break;
+                case 67:
+                    g_arm1Angle = (g_arm1Angle - ANGLE_STEP) % 360;
+                    break;
                 default: return;
             }
             draw(gl, n, viewProjMatrix, u_MvpMatrix, u_NormalMatrix)
-
         }
-
         var g_modelMatrix = new Matrix4()
         var g_mvpMatrix = new Matrix4()
 
-        function draw(gl, n, viewProjMatrix, u_MvpMatrix, u_NormalMatrix) {
-            gl.clear(gl.COLOR_BUFFER_BIT | gl.DEPTH_BUFFER_BIT)
-
-            var arm1Length = 10.0;
-            g_modelMatrix.setTranslate(0.0, -12.0, 0.0)
-            g_modelMatrix.rotate(g_arm1Angle, 0.0, 1.0, 0.0)
-            drawBox(gl, n, viewProjMatrix, u_MvpMatrix, u_NormalMatrix)
-            console.log( 'arm1Length',arm1Length )
-            // g_modelMatrix.translate(0.0, arm1Length, 0.0)
-
-            g_modelMatrix.translate(0.0, 8, 0.0)
-
-            // g_modelMatrix.rotate(g_joint1Angle, 0.0, 0.0, 1.0)
-
-            g_modelMatrix.rotate(g_joint1Angle, 1.0, 0.0, 0.0)
-
-            g_modelMatrix.scale(1.3, 1.0, 1.3)
-
-            drawBox(gl, n, viewProjMatrix, u_MvpMatrix, u_NormalMatrix)
-
-
+        var g_matrixStack = []
+        function pushMatrix(m) {
+            var m2 = new Matrix4(m)
+            g_matrixStack.push(m2)
+        }
+        function popMatrix() {
+            return g_matrixStack.pop()
         }
         var g_normalMatrix = new Matrix4()
-
-        function drawBox(gl, n, viewProjMatrix, u_MvpMatrix, u_NormalMatrix) {
+        function drawBox(gl, n, width, height, depth, viewProjMatrix, u_MvpMatrix, u_NormalMatrix) {
+            pushMatrix(g_modelMatrix)
+            g_modelMatrix.scale(width, height, depth)
             g_mvpMatrix.set(viewProjMatrix)
             g_mvpMatrix.multiply(g_modelMatrix)
-
             gl.uniformMatrix4fv(u_MvpMatrix, false, g_mvpMatrix.elements)
             g_normalMatrix.setInverseOf(g_modelMatrix)
             g_normalMatrix.transpose()
             gl.uniformMatrix4fv(u_NormalMatrix, false, g_normalMatrix.elements)
             gl.drawElements(gl.TRIANGLES, n, gl.UNSIGNED_BYTE, 0)
+            g_modelMatrix = popMatrix()
+        }
+        function draw(gl, n, viewProjMatrix, u_MvpMatrix, u_NormalMatrix) {
+            gl.clear(gl.COLOR_BUFFER_BIT | gl.DEPTH_BUFFER_BIT)
+            var baseHeight = 2.0;
+            g_modelMatrix.setTranslate(0.0, -12.0, 0.0)
+            drawBox(gl, n, 10.0, baseHeight, 10.0, viewProjMatrix, u_MvpMatrix, u_NormalMatrix)
+            var arm1Length = 10.0;
+            g_modelMatrix.translate(0.0, baseHeight, 0.0)
+            g_modelMatrix.rotate(g_arm1Angle, 0.0, 1.0, 0.0)
+            drawBox(gl, n, 3.0, arm1Length, 3.0, viewProjMatrix, u_MvpMatrix, u_NormalMatrix)
+            var arm2Length = 10.0;
+            g_modelMatrix.translate(0.0, arm1Length, 0.0)
+            g_modelMatrix.rotate(g_joint1Angle, 0.0, 0.0, 1.0)
+            drawBox(gl, n, 4.0, arm2Length, 4.0, viewProjMatrix, u_MvpMatrix, u_NormalMatrix)
+            var palmLength = 2.0;
+            g_modelMatrix.translate(0.0, arm2Length, 0.0)
+            g_modelMatrix.rotate(g_joint2Angle, 0.0, 1.0, 0.0)
+            drawBox(gl, n, 2.0, palmLength, 6.0, viewProjMatrix, u_MvpMatrix, u_NormalMatrix)
+            g_modelMatrix.translate(0.0, palmLength, 0.0)
+            pushMatrix(g_modelMatrix)
+            g_modelMatrix.translate(0.0, 0.0, 2.0)
+            g_modelMatrix.rotate(g_joint3Angle, 1.0, 0.0, 0.0)
+            drawBox(gl, n, 1.0, 2.0, 1.0, viewProjMatrix, u_MvpMatrix, u_NormalMatrix)
+            g_modelMatrix = popMatrix()
+            g_modelMatrix.translate(0.0, 0.0, -2.0)
+            g_modelMatrix.rotate(-g_joint3Angle, 1.0, 0.0, 0.0)
+            drawBox(gl, n, 1.0, 2.0, 1.0, viewProjMatrix, u_MvpMatrix, u_NormalMatrix)
         }
 
     </script>
