--- a/index.html
+++ b/index.html
@@ -28,10 +28,12 @@
         //     0.1,
         //     10
         // )
-        const camera = new THREE.PerspectiveCamera(10, window.innerWidth / window.innerHeight, 0.1, 100);
+        const camera = new THREE.PerspectiveCamera(50, window.innerWidth / window.innerHeight, 0.1, 100);
         const renderer = new THREE.WebGLRenderer()
         renderer.setSize(window.innerWidth, window.innerHeight)
         document.body.appendChild(renderer.domElement)
+        const axesHelper = new THREE.AxesHelper(3);
+        scene.add(axesHelper);
 
         // gl_Position = projectionMatrix * modelViewMatrix * vec4( 1.0,1.0,1.0,1.0 );       
         const vertexShader = `
@@ -41,28 +43,39 @@
             gl_Position = projectionMatrix * modelViewMatrix * vec4( position,1.0 );
         }
         `
-        // gl_PointSize = 10.0;
 
         const fragmentShader = `
         // varying vec4 vPosition;
         // varying vec3 position;
         void main() {
-             gl_FragColor = vec4( 1.0,1.0,0.0,1.0 );            
+             gl_FragColor = vec4( 1.0,0.3,0.0,1.0 );            
         }
         `
 
-
         const geometry = new THREE.PlaneGeometry(2, 2)
+
+        // const geometry = new THREE.BoxGeometry(2, 2,2)
         const material = new THREE.ShaderMaterial({
             vertexShader: vertexShader,
             fragmentShader: fragmentShader,
         })
         const plane = new THREE.Mesh(geometry, material)
         scene.add(plane)
-        camera.position.z = 20;
+        camera.position.z = 10;
+        camera.position.x = 2;
+        camera.position.y = 2;
+        // console.log( scene )
+        // console.log(geometry)
+
+    
+        console.log('plane', plane)
+        plane.scale.x = 10
+        plane.position.y = 0
+        // plane.scale.z = 4
+        plane.rotation.y = 1.2
+        plane.rotation.x = 5
 
         renderer.render(scene, camera)
-        console.log('plane', plane)
 
 
     </script>
