--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
 <body>
     <!-- https://codepen.io/nik-lever -->
     <script src="./lib/three.min.js"></script>
-
     <script>
         const scene = new THREE.Scene()
         // const camera = new THREE.OrthographicCamera(
@@ -37,24 +36,18 @@
         document.body.appendChild(renderer.domElement)
         const axesHelper = new THREE.AxesHelper(3);
         scene.add(axesHelper);
-
         // gl_Position = projectionMatrix * modelViewMatrix * vec4( 1.0,1.0,1.0,1.0 );       
         const vertexShader = `
-        // varying vec4 vPosition;
-        // varying vec3 position;
         void main() {           
             gl_Position = projectionMatrix * modelViewMatrix * vec4( position,1.0 );
         }
         `
-
         const fragmentShader = `
-        // varying vec4 vPosition;
-        // varying vec3 position;
+        
         void main() {
              gl_FragColor = vec4( 1.0,0.3,0.0,1.0 );            
         }
         `
-
         // const geometry = new THREE.PlaneGeometry(2, 2)
 
         const geometry = new THREE.BoxGeometry(2, 2, 2)
@@ -71,20 +64,30 @@
         // console.log(geometry)
         // console.log('plane', plane)
         window.addEventListener('mousemove', (e) => {
-            let track1 = e.clientX - window.innerWidth / 2
-            let track2 = track1 / (window.innerWidth)
-            // console.log('track2', track2)          
-            console.log(Math.sin(Math.PI * track2))
+            let track1X = e.clientX - window.innerWidth / 2
+            let track2X = track1X / (window.innerWidth)
+            let resX = Math.sin(Math.PI * track2X)
+            camera.position.x = resX
+            // console.log('track2X', track2X)
+            let track1Y = e.clientY - window.innerHeight / 2
+            let track2Y = track1Y / (window.innerHeight)
+            let resY = Math.sin(Math.PI * track2Y)
+            // console.log(resX, resY)
+            // console.log('track1Y', track1Y)
+            // console.log('track2Y', track2Y)
+            console.log('resY', resY)
+            camera.position.y = resY
+            renderer.render(scene, camera)
         })
         var int1 = 10;
         var int2 = 0;
         var int3 = 1.2;
         var int4 = 5;
         const tick = () => {
-            int1 += 0.1;
-            int2 += 0.1;
-            int3 += 0.1;
-            int4 += 0.1;
+            // int1 += 0.1;
+            // int2 += 0.1;
+            // int3 += 0.1;
+            // int4 += 0.1;
             // console.log('int1', int1)
             // plane.scale.x = int1
             // plane.position.y = int2
@@ -92,10 +95,10 @@
             // plane.rotation.y = int3
             // plane.rotation.x = int4
             // plane.rotation.z = int4
-            renderer.render(scene, camera)
+            // renderer.render(scene, camera)
             // requestAnimationFrame(tick)
         }
-        tick()
+        // tick()
     </script>
 </body>
 
